# scout-rig

./: .gitignore  .vimproject  LICENSE.txt  README.md  README.rdoc  Rakefile  scout-rig.gemspec
doc/: Python.md  PythonWorkflow.md
lib/: scout-rig.rb
lib/scout/: python.rb
lib/scout/python/: paths.rb  run.rb  script.rb  util.rb
lib/scout/workflow/: python.rb
lib/scout/workflow/python/: inputs.rb  task.rb
python/: .gitignore  README.md  pyproject.toml  test.py
python/scout/: __init__.py  runner.py
python/scout/workflow/: remote.py
test/: test_helper.rb
test/scout/: test_python.rb
test/scout/python/: test_run.rb  test_script.rb  test_util.rb
test/scout/workflow/: test_python.rb
test/scout/workflow/python/: test_task.rb
