[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-rig"
version = "0.2.4"
description = "Python helpers for Scout workflows, TSV files, and PythonWorkflow task metadata"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Miki S. Vazquez" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy",
  "pandas"
]

[project.optional-dependencies]
remote = [
  "requests"
]
inspect = [
  "rich"
]

[project.urls]
Homepage = "https://github.com/mikisvaz/scout-rig"
Repository = "https://github.com/mikisvaz/scout-rig"
Issues = "https://github.com/mikisvaz/scout-rig/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scout*"]

[tool.setuptools]
include-package-data = true
